--- a/projects/hello_world/views/hello-world-dari.pug
+++ b/projects/hello_world/views/hello-world-dari.pug
@@ -7,8 +7,30 @@ html
     link(rel="stylesheet" href="/stylesheets/application.css")
 
   body
+    nav
+      ul
+        li
+          a(href="/english")
+            img.flag(src="/images/flag-of-United-States-of-America.png"
+                     alt="US Flag"
+                     title="Go to US English site")
+        li
+          a(href="/french")
+            img.flag(src="/images/flag-of-France.png"
+                     alt="Drapeau de la france"
+                     title="Aller sur le site français")
+        li
+          a(href="/serbian")
+            img.flag(src="/images/flag-of-Serbia.png"
+                     alt="Застава Србије"
+                     title="Идите на српски сајт")
+        li
+          a.current(href="/dari")
+            img.flag(src="/images/flag-of-Afghanistan.svg.png"
+                     alt="بیرق افغانستان"
+                     title="به سایت دری برو  ")
     header
       h1 !سلام جهان
     main
-      p !به زودی قرار است یک انجینیر نرم افزار شوم
+      p !قرار است به زودی یک انجینیر نرم افزار شوم
       img(src="/images/earth.jpg" alt="زمین" title="زمین")
