--- a/projects/hello_world/views/hello-world-english.pug
+++ b/projects/hello_world/views/hello-world-english.pug
@@ -6,6 +6,23 @@ html
   meta(charset="UTF-8")
   link(rel="stylesheet" href="/stylesheets/application.css")
   body
+    nav
+      ul
+        li
+          a.current(href="/english")
+            img.flag(src="/images/flag-of-United-States-of-America.png"
+                     alt="US Flag"
+                     title="Go to US English site")
+        li
+          a(href="/french")
+            img.flag(src="/images/flag-of-France.png"
+                     alt="Drapeau de la france"
+                     title="Aller sur le site français")
+        li
+          a(href="/serbian")
+            img.flag(src="/images/flag-of-Serbia.png"
+                     alt="Застава Србије"
+                     title="Идите на српски сајт")
     header 
       h1 Hello World! 
     main 
