--- a/projects/hello_world/views/hello-world-french.pug
+++ b/projects/hello_world/views/hello-world-french.pug
@@ -7,6 +7,24 @@ html
     link(rel="stylesheet" href="/stylesheets/application.css")
 
   body
+    nav
+      ul
+        li
+          a(href="/english")
+            img.flag(src="/images/flag-of-United-States-of-America.png"
+                     alt="US Flag"
+                     title="Go to US English site")
+        li
+          a.current(href="/french")
+            img.flag(src="/images/flag-of-France.png"
+                     alt="Drapeau de la france"
+                     title="Aller sur le site français")
+        li
+          a(href="/serbian")
+            img.flag(src="/images/flag-of-Serbia.png"
+                     alt="Застава Србије"
+                     title="Идите на српски сајт")
+
     header
       h1 Bonjour le monde!
     main
