--- a/projects/hello_world/views/hello-world-dari.pug
+++ b/projects/hello_world/views/hello-world-dari.pug
@@ -1,36 +1,13 @@
-doctype html
+extends layout
 
-html
-  head
-    title  این عنوان صفحه است
-    meta(charset="UTF-8")
-    link(rel="stylesheet" href="/stylesheets/application.css")
+block page_title
+  title سلام جهان - دری
 
-  body
-    nav
-      ul
-        li
-          a(href="/english")
-            img.flag(src="/images/flag-of-United-States-of-America.png"
-                     alt="US Flag"
-                     title="Go to US English site")
-        li
-          a(href="/french")
-            img.flag(src="/images/flag-of-France.png"
-                     alt="Drapeau de la france"
-                     title="Aller sur le site français")
-        li
-          a(href="/serbian")
-            img.flag(src="/images/flag-of-Serbia.png"
-                     alt="Застава Србије"
-                     title="Идите на српски сајт")
-        li
-          a.current(href="/dari")
-            img.flag(src="/images/flag-of-Afghanistan.svg.png"
-                     alt="بیرق افغانستان"
-                     title="به سایت دری برو  ")
-    header
-      h1 !سلام جهان
-    main
-      p !قرار است به زودی یک انجینیر نرم افزار شوم
-      img(src="/images/earth.jpg" alt="زمین" title="زمین")
+block greeting
+  h1 سلام جهان!
+
+block software_engineer
+  p من به زودی یک انجنیر نرم افزار خواهم شد!
+  img(src="/images/earth.jpg"
+      alt="کره زمین"
+      title="کره زمین")
