--- a/projects/hello_world/views/hello-world-pashto.pug
+++ b/projects/hello_world/views/hello-world-pashto.pug
@@ -1,36 +1,13 @@
-doctype html
+extends layout
 
-html
-  head
-    title دا د صفحه ی عنوان ده
-    meta(charset="UTF-8")
-    link(rel="stylesheet" href="/stylesheets/application.css")
+block page_title
+  title سلام نړۍ - پښتو
 
-  body
-    nav
-      ul
-        li
-          a(href="/english")
-            img.flag(src="/images/flag-of-United-States-of-America.png"
-                     alt="US Flag"
-                     title="Go to US English site")
-        li
-          a(href="/french")
-            img.flag(src="/images/flag-of-France.png"
-                     alt="Drapeau de la france"
-                     title="Aller sur le site français")
-        li
-          a(href="/serbian")
-            img.flag(src="/images/flag-of-Serbia.png"
-                     alt="Застава Србије"
-                     title="Идите на српски сајт")
-        li
-          a.current(href="/pashto")
-            img.flag(src="/images/flag-of-Afghanistan.svg.png"
-                     alt="د افغانستان بیرغ"
-                     title="د پښتو سایټ ته لاړ شه")
-    header
-      h1 !سلام نړۍ
-    main
-      p !زه به ډیر ژر یوه سافټویر انجینیره شم
-      img(src="/images/earth.jpg" alt="نړۍ" title="نړۍ")
+block greeting
+  h1 سلام نړۍ!
+
+block software_engineer
+  p زه به ژر یو سافټویر انجنیره شم!
+  img(src="/images/earth.jpg"
+      alt="ځمکه"
+      title="ځمکه")
